# keel-examples

./: README.md
agentic-research/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
agentic-research/src/keel_research_agent/: __init__.py  agent.py  mock_providers.py  run.py  telemetry.py  tools.py
docs/posts/: moving-off-langchain-to-keel.md  submission-copy.md
langchain-migration/: README.md
